--- a/assets/styles/utilities/_base.scss
+++ b/assets/styles/utilities/_base.scss
@@ -3,3 +3,6 @@
 body {
   font-family: $font-family-primary;
 }
+
+main {
+}
