--- a/assets/styles/utilities/_variables.module.scss
+++ b/assets/styles/utilities/_variables.module.scss
@@ -1,6 +1,7 @@
 // Layers
 $z-index-base: 0;
 $z-index-layout: 1;
+$z-index-main-layout: 2;
 $z-index-video-background: 2;
 $z-index-primary-content: 3;
 $z-index-nav: 4;
